--- a/style.css
+++ b/style.css
@@ -132,3 +132,10 @@ h1, h2 {
 #volume{
     width:100%;
 }
+
+.welcome {
+    position: absolute;
+    top: 60%;
+    left: 40%;
+    text-align: center;
+}
