--- a/style.css
+++ b/style.css
@@ -135,7 +135,8 @@ h1, h2 {
 
 .welcome {
     position: absolute;
-    top: 60%;
-    left: 40%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
 }
