--- a/style.css
+++ b/style.css
@@ -137,5 +137,6 @@ h1, h2 {
     position: absolute;
     top: 60%;
     left: 40%;
+    transform: translate(-50%, -50%);
     text-align: center;
 }
