--- a/style.css
+++ b/style.css
@@ -134,9 +134,6 @@ h1, h2 {
 }
 
 .welcome {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    max-width: 500px;
+    margin: auto;
 }
