--- a/style.css
+++ b/style.css
@@ -136,4 +136,9 @@ h1, h2 {
 .welcome {
     max-width: 500px;
     margin: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
