--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 html {
-    background: #303030;
+    background: #928D8D;
     color: white;
     font-family: Courier, sans-serif;
     font-size: 24px;
