--- a/style.css
+++ b/style.css
@@ -138,7 +138,11 @@ h1, h2 {
 
 .pinpad {
     text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     margin: auto;
+    position: absolute;
 }
  .pin-button {
     position: relative;
