--- a/style.css
+++ b/style.css
@@ -165,6 +165,27 @@ h1, h2 {
     transition: box-shadow 0.2s;
     margin-top: .4em;
 }
+.undo-button {
+    position: relative;
+    width:100%;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 4px;
+    min-width: 64px;
+    height: 36px;
+    text-align: center;
+    text-overflow: ellipsis;
+    text-transform: uppercase;
+    color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
+    background-color: rgb(var(--pure-material-primary-rgb, 10, 0, 200));
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    font-family: var(--pure-material-font, "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui, -apple-system);
+    font-size: 20px;
+    font-weight: 500;
+    overflow: hidden;
+    transition: box-shadow 0.2s;
+    margin-top: .4em;
+}
 
 .instruction-list {
     padding-top: 28px;
@@ -190,10 +211,6 @@ ul li { padding: 5px 0px; }
 .btn-matrix > .btn {
     width: 32%;
     height: 10%;
-  }
-  
-.btn-matrix > .btn:first-child, .btn-matrix > .btn:last-child {
-    border-radius: 0;
   }
   
 .btn-matrix .btn + .btn {
