--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ h1, h2 {
     overflow: hidden;
     transition: box-shadow 0.2s;
     margin-top: .4em;
+    cursor: pointer;
 }
 .undo-button {
     position: relative;
@@ -185,6 +186,7 @@ h1, h2 {
     overflow: hidden;
     transition: box-shadow 0.2s;
     margin-top: .4em;
+    cursor: pointer;
 }
 
 .enter-button {
@@ -207,6 +209,7 @@ h1, h2 {
     overflow: hidden;
     transition: box-shadow 0.2s;
     margin-top: .4em;
+    cursor: pointer;
 }
 
 .instruction-list {
