--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
     font-size: 24px;
 }
 p {
-    color: white;   
+    color: white;
 }
 h1, h2 {
     font-family: 'Press Start 2P';
@@ -212,6 +212,14 @@ h1, h2 {
     cursor: pointer;
 }
 
+.form {
+  width: 300px;
+  height: 20px;
+  border: 1px solid blue;
+  box-sizing: border-box;
+}
+
+
 .instruction-list {
     padding-top: 28px;
     padding-bottom: 28px;
@@ -227,17 +235,17 @@ ul li { padding: 5px 0px; }
     width: 100px;
 }
 
-.btn-matrix { 
+.btn-matrix {
     width: 40rem;
     height: 20rem;
     flex-wrap: wrap;
   }
-  
+
 .btn-matrix > .btn {
     width: 32%;
     height: 10%;
   }
-  
+
 .btn-matrix .btn + .btn {
     margin-left: 0;
   }
