--- a/style.css
+++ b/style.css
@@ -291,3 +291,44 @@ ul li { padding: 5px 0px; }
   .printerBox{
       cursor:pointer;
   }
+
+  .divTable{
+	display: table;
+    width: 100%;
+    height:100%;
+}
+.divTableRow {
+	display: table-row;
+}
+.divTableHeading {
+	background-color: #EEE;
+	display: table-header-group;
+}
+.divTableCell, .divTableHead {
+    background-image:url("assets/Double_Sided_Printing-512.webp");
+    background-size: contain;
+    background-repeat: no-repeat;
+	border: 1px solid #999999;
+	display: table-cell;
+    padding: 3px 10px;
+    cursor: pointer;
+}
+.divTableHeading {
+	background-color: #EEE;
+	display: table-header-group;
+	font-weight: bold;
+}
+.divTableFoot {
+	background-color: #EEE;
+	display: table-footer-group;
+	font-weight: bold;
+}
+.divTableBody {
+	display: table-row-group;
+}
+
+.sidesText{
+    color:black;
+    font-weight:bold;
+    user-select: none;
+}
