--- a/style.css
+++ b/style.css
@@ -332,3 +332,40 @@ ul li { padding: 5px 0px; }
     font-weight:bold;
     user-select: none;
 }
+
+.radio-toolbar {
+    margin: auto;
+  }
+  
+  .radio-toolbar input[type="radio"] {
+    opacity: 0;
+    position: fixed;
+    width: 0;
+  }
+  
+  .radio-toolbar label {
+      display: inline-block;
+      background-color: rgb(0, 170, 255);
+      padding: 10px 20px;
+      font-family: sans-serif, Arial;
+      font-size: 16px;
+      border: 2px solid #444;
+      border-radius: 4px;
+  }
+  
+  .radio-toolbar label:hover {
+    background-color: #dfd;
+  }
+  
+  .radio-toolbar input[type="radio"]:focus + label {
+      border: 2px dashed #444;
+  }
+  
+  .radio-toolbar input[type="radio"]:checked + label {
+      background-color: rgb(74, 74, 147);
+      border-color: #4c4;
+  }
+
+  #showonselection{
+      display: none
+  }
