--- a/style.css
+++ b/style.css
@@ -290,6 +290,14 @@ ul li { padding: 5px 0px; }
 
   .printerBox{
       cursor:pointer;
+      background-color: rgb(0, 170, 255);
+      padding: 10px 20px;
+      font-family: sans-serif, Arial;
+      font-size: 16px;
+      border: 2px solid #444;
+      border-radius: 4px;
+      width: fit-content;
+      display: inline-block;
   }
 
   .divTable{
