--- a/style.css
+++ b/style.css
@@ -384,3 +384,11 @@ ul li { padding: 5px 0px; }
     width: 20rem;
     border: .1rem black;
   }
+.printing-stage {
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: auto;
+    position: absolute;
+}
