--- a/style.css
+++ b/style.css
@@ -392,4 +392,28 @@ ul li { padding: 5px 0px; }
     transform: translate(-50%, -50%);
     margin: auto;
     position: absolute;
+    width: 100%;
+    height: 50%;
+    background-color: white;
+}
+.last-line {
+    position: relative;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 4px;
+    min-width: 64px;
+    height: 36px;
+    text-align: center;
+    text-overflow: ellipsis;
+    text-transform: uppercase;
+    color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
+    background-color: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    font-family: var(--pure-material-font, "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui, -apple-system);
+    font-size: 20px;
+    font-weight: 500;
+    overflow: hidden;
+    transition: box-shadow 0.2s;
+    margin-top: .4em;
+    cursor: pointer;
 }
