--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ ul li { padding: 5px 0px; }
     transform: translate(-50%, -50%);
     margin: auto;
     position: absolute;
-    background-color: white;
+    background-color: grey;
 }
 .last-line {
     position: relative;
