--- a/style.css
+++ b/style.css
@@ -297,6 +297,7 @@ ul li { padding: 5px 0px; }
       border: 2px solid #444;
       border-radius: 4px;
       width: fit-content;
+      height: fit-content;
       display: inline-block;
   }
 
