--- a/style.css
+++ b/style.css
@@ -499,17 +499,17 @@ ul li { padding: 5px 0px; }
 }
 
 
-.btn-matrix {
+.btn-matrix2 {
     width: 100%;
     height: 100%;
     flex-wrap: wrap;
   }
 
-.btn-matrix > .btn {
+.btn-matrix2 > .btn {
     width: 30%;
     height: 10%;
   }
 
-.btn-matrix .btn + .btn {
+.btn-matrix2 .btn + .btn {
     margin-left: 0;
   }
