--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h1, h2 {
 
 .pinpad {
     text-align: center;
-    top: 50%;
+    top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
     margin: auto;
@@ -151,7 +151,6 @@ h1, h2 {
     border: none;
     border-radius: 4px;
     min-width: 64px;
-    height: 36px;
     text-align: center;
     text-overflow: ellipsis;
     text-transform: uppercase;
@@ -173,7 +172,6 @@ h1, h2 {
     border: none;
     border-radius: 4px;
     min-width: 64px;
-    height: 36px;
     text-align: center;
     text-overflow: ellipsis;
     text-transform: uppercase;
@@ -196,7 +194,6 @@ h1, h2 {
     border: none;
     border-radius: 4px;
     min-width: 64px;
-    height: 36px;
     text-align: center;
     text-overflow: ellipsis;
     text-transform: uppercase;
@@ -236,14 +233,14 @@ ul li { padding: 5px 0px; }
 }
 
 .btn-matrix {
-    width: 40rem;
-    height: 20rem;
+    width: 100%;
+    height: 50%;
     flex-wrap: wrap;
   }
 
 .btn-matrix > .btn {
     width: 32%;
-    height: 10%;
+    height: 20%;
   }
 
 .btn-matrix .btn + .btn {
@@ -513,3 +510,7 @@ ul li { padding: 5px 0px; }
 .btn-matrix2 .btn + .btn {
     margin-left: 0;
   }
+
+.bright-slider{
+    width:100%;
+}
