fixing bottom line

--- a/style.css
+++ b/style.css
@@ -381,7 +381,13 @@ ul li { padding: 5px 0px; }
     display: flex;
     width: 30rem;
     justify-content: space-between;
-    width: 30rem;
+    border: .1rem black;
+    background-color: #464343;
+  }
+
+  .sameLine2 {
+    display: flex;
+    justify-content: space-between;
     border: .1rem black;
     background-color: #464343;
   }
@@ -419,7 +425,6 @@ ul li { padding: 5px 0px; }
 .different-elements {
     display: flex;
     justify-content: space-between;
-<<<<<<< HEAD
     padding-bottom: 1em;
 }
 
@@ -431,7 +436,6 @@ ul li { padding: 5px 0px; }
     font-size: 70%;
     padding-right: 3em;
   }
-=======
     width: 30rem;
 }
 
@@ -526,4 +530,3 @@ ul li { padding: 5px 0px; }
 .bright-slider{
     width:100%;
 }
->>>>>>> 124fc8d6716bd98f1d70c239bbbb6d0c487a5bf6
