--- a/style.css
+++ b/style.css
@@ -425,22 +425,18 @@ ul li { padding: 5px 0px; }
 .different-elements {
     display: flex;
     justify-content: space-between;
-<<<<<<< HEAD
-=======
     width: fit-content;
->>>>>>> a50cbd5b8871ad386348384ae64b66ec0bf10061
     padding-bottom: 1em;
 }
 
 .sameRow {
     display: flex;
 
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding-left: 3em;
     font-size: 70%;
     padding-right: 3em;
-  }
-    width: 30rem;
+    width: 40rem;
 }
 
 .pinpad2 {
